[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["scuervo <scuervo91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
pydantic = "^1.8.2"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
